<resources>
    <string name="app_name">Snap Challenge</string>
    <string name="action_settings">Settings</string>

    <!-- Voyage -->
    <string name="transport">Dans les transports</string>
    <string name="simple">Simple</string>
    <string name="grouped">Grouped</string>
    <string name="home">Home</string>
    <string name="my_challenges">My challenges</string>
    <string name="friends">Friends</string>
    <string name="hashtag">Hashtag</string>

    <string name="ranking">Ranking</string>
    <string name="subscribe">Subscribe</string>

    <string name="answer">Answer</string>
    <string name="bet">BET</string>
    <string name="challenge_privacy">Challenge privacy</string>
    <string name="who_can_see_your_challenge">Who can see your challenge?</string>
    <string name="public_word">Public</string>
    <string name="public_privacy_detail">All the users of the application</string>
    <string name="private_word">Private</string>
    <string name="private_privacy_detail">Vous et l\'auteur du challenge</string>
    <string name="new_action">New action</string>
    <string name="name_of_action">Action name</string>
    <string name="propose_action">Propose this action to Snap Challenge</string>
    <string name="validate">VALIDATE</string>
    <string name="publish_challenge">Publier un challenge</string>
    <string name="describe_your_challenge">Décrivez votre challenge</string>
    <string name="complete_challenge">Complétez le challenge</string>
    <string name="my_profil">Mon profil</string>
    <string name="error_default">Une erreur est survenue</string>
    <string name="picture_or_video">Photo ou vidéo?</string>
    <string name="new_challenge">Nouveau challenge</string>

    <string name="user_sent_challenge">%1$s vous a lancé un challenge!</string>
    <string name="accept">Accepter</string>
    <string name="refuse">Refuser</string>
    <string name="lay_down_challenge">LANCER LE DÉFI !</string>
    <string name="choose_user_to_lay_down">Qui voulez vous challenger ?</string>
    <string name="lay_down_a_challenge">Lancer un challenge</string>
    <string name="choose_action_to_realize">Choisissez une action à réaliser !</string>
    <string name="choose_challenged_user">Choisir le challengé</string>
    <string name="action_to_realize">Action</string>
    <string name="choose_in_list">Choisir dans la liste</string>
    <string name="choose_challenge_time">Définissez un délai (optionnel)</string>
    <string name="time">Délai</string>
    <string name="day">Jour</string>
    <string name="hour">Heure</string>
    <string name="minute">Minute</string>
    <string name="no_time">Pas de délai</string>
    <string name="discardChallengeCreation">Abandonner la création du challenge ?</string>
    <string name="confirmationActionSentToApp">Merci pour votre nouvelle idée de challenge !</string>
    <string name="challenged_user">Challengé</string>
    <string name="time_optionnal">Délai (optionnel)</string>
    <string name="categories">Catégories</string>
    <string name="action">Action</string>
    <string name="search_action">Rechercher une action</string>
    <string name="picture">photo</string>
    <string name="video">video</string>
    <string name="answer_challenge">RÉPONDRE AU CHALLENGE</string>
    <string name="like">J\'aime</string>
    <string name="comment">Commenter</string>
    <string name="share">Partager</string>
    <string name="likeWord">like</string>
    <string name="add_comment">Ajouter un commentaire...</string>
    <string name="points">points</string>
    <string name="points_upper">POINTS</string>
    <string name="challenges_upper">CHALLENGES</string>
    <string name="subscribers_upper">ABONNÉS</string>
    <string name="mediaImageTransition">mediaImageTransition</string>
    <string name="profilPictureTransition">profilPictureTransition</string>
    <string name="challenges">Challenges</string>
    <string name="comments">Commentaires</string>
    <string name="profil">Profil</string>
    <string name="news">Fil d\'actualité</string>
    <string name="community">Communauté</string>
    <string name="answer_challenge_lower">Répondre au challenge</string>
    <string name="who_can_see_your_answer">Qui peut voir votre réponse?</string>
    <string name="placeholder_media">Séléctionnez une photo ou une vidéo pour prouver votre challenge</string>
    <string name="send">ENVOYER</string>
    <string name="failed">Echoué</string>
    <string name="placeholder_media_publish">Sélectionnez une photo ou une vidéo pour publier votre challenge</string>
    <string name="challenge">Challenge</string>
    <string name="proof">Preuve</string>
    <string name="add_proof">AJOUTER UNE PREUVE</string>
    <string name="add_challenge">AJOUTER UN CHALLENGE</string>
    <string name="friend_to_dare">Amis à défier</string>
    <string name="search">Rechercher</string>

    <plurals name="x_minute">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <plurals name="x_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="x_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="x_challenger">
        <item quantity="one">%d challenger</item>
        <item quantity="other">%d challengers</item>
    </plurals>

    <plurals name="x_point">
        <item quantity="one">%d point</item>
        <item quantity="zero">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>

    <plurals name="x_day_remaining">
        <item quantity="one">%d jour restant</item>
        <item quantity="other">%d jours restant</item>
    </plurals>
</resources>
