<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/choose_challenge_time_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_large"/>

    <LinearLayout
        android:id="@+id/choose_challenge_time_dialog_layout_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@+id/choose_challenge_time_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/choose_challenge_time_dialog_layout_hour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"/>
        <NumberPicker
            android:id="@+id/choose_challenge_time_dialog_picker_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </NumberPicker>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_challenge_time_dialog_layout_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/choose_challenge_time_dialog_title"
        app:layout_constraintLeft_toRightOf="@+id/choose_challenge_time_dialog_layout_day"
        app:layout_constraintRight_toLeftOf="@+id/choose_challenge_time_dialog_layout_minute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"/>
        <NumberPicker
            android:id="@+id/choose_challenge_time_dialog_picker_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </NumberPicker>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_challenge_time_dialog_layout_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@+id/choose_challenge_time_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/choose_challenge_time_dialog_layout_hour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"/>
        <NumberPicker
            android:id="@+id/choose_challenge_time_dialog_picker_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </NumberPicker>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>