<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/choose_action_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/action_to_realize"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/choose_action_dialog_in_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large"
        app:layout_constraintTop_toBottomOf="@+id/choose_action_dialog_title"
        app:layout_constraintBottom_toTopOf="@+id/choose_action_dialog_new_action_layout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/padding_small"
            android:src="@drawable/ic_list"/>
        <TextView
            android:id="@+id/choose_action_dialog_in_list_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_in_list"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_action_dialog_new_action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large"
        app:layout_constraintTop_toBottomOf="@+id/choose_action_dialog_in_list_layout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/padding_small"
            android:src="@drawable/ic_add"/>
        <TextView
            android:id="@+id/choose_action_dialog_new_action_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_action"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>