<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.NewActionActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_new_action_name_action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:paddingBottom="30sp"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:hint="@string/name_of_action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_new_action_name_action"
            android:layout_width="match_parent"
            android:maxLength="144"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/activity_new_action_propose_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/propose_action"
            android:paddingStart="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@+id/activity_new_action_name_action_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@android:color/black"/>

        <Switch
            android:id="@+id/activity_new_action_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingEnd="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@+id/activity_new_action_name_action_layout"
            app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/activity_new_action_validate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_theme"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/activity_new_action_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="@dimen/padding_small"
            android:textColor="@android:color/white"/>
    </FrameLayout>


</android.support.constraint.ConstraintLayout>