<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_small"
    android:paddingEnd="@dimen/padding_small"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.PrivacyChallengeActivity">

    <TextView
        android:id="@+id/activity_privacy_challenge_general_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_can_see_your_answer"
        android:layout_marginTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity_privacy_challenge_layout_public"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_privacy_challenge_layout_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_privacy_challenge_general_question">


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/activity_privacy_challenge_checkbox_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:button="@drawable/circular_checkbox"
            android:checked="true"
            app:layout_constraintRight_toLeftOf="@+id/activity_privacy_challenge_public_img"/>
        <ImageView
            android:id="@+id/activity_privacy_challenge_public_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/public_earth"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/activity_privacy_challenge_checkbox_public"
            app:layout_constraintRight_toLeftOf="@+id/activity_privacy_challenge_public_detail"/>
        <LinearLayout
            android:id="@+id/activity_privacy_challenge_public_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/activity_privacy_challenge_public_img">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_word"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_privacy_detail"/>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/activity_privacy_challenge_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/activity_privacy_challenge_layout_public"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_privacy_challenge_layout_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        app:layout_constraintTop_toBottomOf="@+id/activity_privacy_challenge_separator">


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/activity_privacy_challenge_checkbox_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/circular_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:checked="false"
            app:layout_constraintRight_toLeftOf="@+id/activity_privacy_challenge_private_img"/>
        <ImageView
            android:id="@+id/activity_privacy_challenge_private_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/activity_privacy_challenge_checkbox_private"
            app:layout_constraintRight_toLeftOf="@+id/activity_privacy_challenge_private_detail"/>
        <LinearLayout
            android:id="@+id/activity_privacy_challenge_private_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/activity_privacy_challenge_private_img">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_word"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_privacy_detail"/>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>