<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.AnswerChallengeActivity">

        <TextView
            android:id="@+id/activity_publish_challenge_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/activity_publish_challenge_action_layout"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/challenge"
            android:textColor="@color/black"/>


            <FrameLayout
                android:id="@+id/activity_publish_challenge_action_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_frame"
                android:layout_margin="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@+id/activity_publish_challenge_action"
                app:layout_constraintBottom_toTopOf="@+id/activity_publish_challenge_label_proof">

                <ImageView
                    android:id="@+id/activity_publish_challenge_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/padding_large"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_128"/>

                <TextView
                    android:id="@+id/activity_publish_challenge_action_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_large"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/primary_text"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </FrameLayout>


        <TextView
            android:id="@+id/activity_publish_challenge_label_proof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_publish_challenge_action_layout"
            app:layout_constraintBottom_toTopOf="@+id/activity_publish_challenge_layout_add_proof"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/proof"
            android:textColor="@color/black"/>

        <!-- START PLACEHOLDER MEDIA -->
        <LinearLayout
            android:id="@+id/activity_publish_challenge_layout_add_proof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_blue_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_publish_challenge_label_proof"
            app:layout_constraintBottom_toTopOf="@+id/activity_publish_challenge_layout_media"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_proof"
                android:paddingBottom="@dimen/padding_small"
                android:paddingTop="@dimen/padding_small"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:fontFamily="@font/roboto_bold"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text"/>
        </LinearLayout>
        <!-- END PLACEHOLDER MEDIA -->

        <FrameLayout
            android:id="@+id/activity_publish_challenge_layout_media"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_publish_challenge_layout_add_proof">
            <ImageView
                android:id="@+id/activity_publish_challenge_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:foregroundGravity="top"
                android:visibility="visible"
                />
            <VideoView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>